[metadata]
author = Richard Kemp
author_email = sylver@materya.io
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
description = Full suite for automated quantitative trading in Python
keywords =
    algorithmic
    bot
    forex
    ml
    quant
    quantitative
    stocks
    trading
license = GNU General Public License version 3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Richard Kemp
maintainer_email = sylver@materya.io
name = materya-mercury
url = https://github.com/materya/mercury
version = attr: src.mercury.__version__

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
exclude =
    *examples*
    *tests*
    *test*

[tool:pytest]
addopts = -v -raP
    --ignore=setup.py
    --ignore=conftest.py
    --flake8
    --cov-report=term-missing --cov=mercury
markers =
    online: mark a test needing to open a remote connection

[flake8]
docstring-convention = google
docstring-quotes = double
exclude =
    # Examples
    samples/*,
    # Tests files
    test/*,
    # There's no value in checking cache directories
    __pycache__,
    # The conf file is mostly autogenerated, ignore it
    docs/source/conf.py,
    # No need to traverse our git directory
    .git
inline-quotes = double
max-complexity = 6
max-line-length = 79
multiline-quotes = double
per-file-ignores =
    test/*:D101 D102 D103 TAE001 S101

[coverage:run]
branch = True
omit =
    */examples/*
    */test/*
